force-app/main/default/objects/Day_Planner__c/Day_Planner__c.object-meta.xml
<CustomObject>
    <label>Day Planner</label>
    <nameField>
        <label>Day Visit Plane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Day Planner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>