force-app/main/default/objects/Day_Planner__c/fields/Actual_Distance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Distance__c</fullName>
    <label>Actual Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>