force-app/main/default/objects/Day_Planner__c/fields/Area2__c.field-meta.xml
<CustomField>
    <fullName>Area2__c</fullName>
    <label>Area</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>