force-app/main/default/objects/Day_Planner__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Day Planners</relationshipLabel>
    <relationshipName>Day_Planners</relationshipName>
    <type>Lookup</type>
</CustomField>