force-app/main/default/objects/Day_Planner__c/fields/Attendee_End_Location__c.field-meta.xml
<CustomField>
    <fullName>Attendee_End_Location__c</fullName>
    <inlineHelpText>For Attendance Track</inlineHelpText>
    <label>Attendee End Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>