force-app/main/default/objects/Day_Planner__c/fields/Attendee_Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Start_Location__c</fullName>
    <label>Attendee Start Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>