force-app/main/default/objects/Day_Planner__c/fields/Date_of_Execution__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Execution__c</fullName>
    <label>Date of Execution</label>
    <type>Date</type>
</CustomField>