force-app/main/default/objects/Day_Planner__c/fields/Estimated_Distance_Kms__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Distance_Kms__c</fullName>
    <label>Estimated Distance (Kms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>