force-app/main/default/objects/Day_Planner__c/fields/Final_Location_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Final_Location_Date_and_Time__c</fullName>
    <label>Final Location Date and Time</label>
    <type>DateTime</type>
</CustomField>