force-app/main/default/objects/Day_Planner__c/fields/Initial_Location_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Location_Date_and_Time__c</fullName>
    <label>Initial Location Date and Time</label>
    <type>DateTime</type>
</CustomField>