force-app/main/default/objects/Day_Planner__c/fields/Monthly_Planner__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Planner__c</fullName>
    <label>Monthly Planner</label>
    <referenceTo>Monthly_Planner__c</referenceTo>
    <relationshipLabel>Day Planners</relationshipLabel>
    <relationshipName>Day_Planners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>