force-app/main/default/objects/Day_Planner__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <displayFormat>RT-{000000000}</displayFormat>
    <label>Record Id</label>
    <type>AutoNumber</type>
</CustomField>