force-app/main/default/objects/Day_Planner__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <formula>Monthly_Planner__r.Representative__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representative</label>
    <type>Text</type>
</CustomField>