force-app/main/default/objects/Day_Planner__c/fields/Representative_End_Location__c.field-meta.xml
<CustomField>
    <fullName>Representative_End_Location__c</fullName>
    <inlineHelpText>Sales rep end Location</inlineHelpText>
    <label>Representative End Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>