force-app/main/default/objects/Day_Planner__c/fields/Representative_Initial_Location__c.field-meta.xml
<CustomField>
    <fullName>Representative_Initial_Location__c</fullName>
    <inlineHelpText>Sales rep Location on Site</inlineHelpText>
    <label>Representative Initial Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>