force-app/main/default/objects/Day_Planner__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement (Order Description)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>