force-app/main/default/objects/Day_Planner__c/recordTypes/Day_Planner_Create_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Day_Planner_Create_Record_Type</fullName>
    <active>true</active>
    <label>Day Planner - Create Record Type</label>
</RecordType>