force-app/main/default/objects/Day_Planner__c/validationRules/Parent_Child_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Child_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>Area__r.Parent_Location__c &lt;&gt; Monthly_Planner__r.Area__c</errorConditionFormula>
    <errorMessage>Please choose appropriate Area which is related to Monthly Planner</errorMessage>
</ValidationRule>