force-app/main/default/objects/Day_Planner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Date_of_Execution__c</columns>
    <columns>Estimated_Distance_Kms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>