force-app/main/default/objects/Day_Planner__c/listViews/Required_View.listView-meta.xml
<ListView>
    <fullName>Required_View</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Monthly_Planner__c</columns>
    <filterScope>Mine</filterScope>
    <label>Required View</label>
</ListView>